chore(jenkins): maven image upgrade
- cleanup of deprecated jvm options

realtes to #OPT-2152